<resources>
    <string name="app_name">CoachBook</string>
    <string name="profile">Profile</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="select_category">Select a category:</string>
    <string name="new_category">New category</string>
    <string name="new_exercise">New exercise</string>
    <string name="about">About</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="category_name">Category name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="select_categories">Select Categories</string>
    <string name="add_photos">Add photos</string>
    <string name="next">Next</string>
    <string name="update_database">Update Database</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="category_description">Category Description</string>
</resources>
