<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_exercises"
            android:title="@string/exercises"
            android:checked="true"/>


        <item android:title="Sub items">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_third_fragment"
                        android:icon="@drawable/ic_settings_wheel"
                        android:title="@string/settings" />
                </group>
            </menu>
        </item>
    </group>


</menu>

